<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.foodtracker.ui.newitem.NewFoodItemViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- Date Field -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/date"
                app:layout_constraintBottom_toTopOf="@+id/foodField"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconContentDescription="Calendar Date Icon"
                app:startIconDrawable="@drawable/ic_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text="@{viewModel.dateString}" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Food Description Field -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/foodField"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/food"
                app:layout_constraintEnd_toEndOf="@id/dateField"
                app:layout_constraintStart_toStartOf="@id/dateField"
                app:layout_constraintTop_toBottomOf="@+id/dateField"
                app:startIconDrawable="@drawable/ic_food">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@={viewModel.foodString}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/foodQuailtyQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:text="@string/how_healthy_would_you_say_this_meal_was"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/foodField"
                app:layout_constraintTop_toBottomOf="@+id/foodField" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:checkedButton="@+id/radio_button_1"
                app:layout_constraintStart_toStartOf="@id/foodQuailtyQuestion"
                app:layout_constraintTop_toBottomOf="@id/foodQuailtyQuestion">

                <RadioButton
                    android:id="@+id/radio_button_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="@{() -> viewModel.setFoodQuality(1)}"
                    android:text="@string/healthy" />

                <RadioButton
                    android:id="@+id/radio_button_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="@{() -> viewModel.setFoodQuality(2)}"
                    android:text="@string/somewhat_healthy" />

                <RadioButton
                    android:id="@+id/radio_button_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="@{() -> viewModel.setFoodQuality(3)}"
                    android:text="@string/unhealthy" />
            </RadioGroup>

            <Button
                android:id="@+id/logFoodButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:onClick="@{() -> viewModel.onLogFoodClicked()}"
                android:text="@string/log_food"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/radioGroup"
                app:layout_constraintTop_toBottomOf="@id/radioGroup" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>
